# faas-wasi-runtime-image

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  Makefile  README.md
contrib/etc/: install.sh
src/: add.rs  handler.rs  lib.rs  main.rs
