[package]
name = "faas-wasm-runtime-image"
version = "0.1.0"
authors = ["Daniel Bevenius <daniel.bevenius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm_executor"
path = "src/lib.rs"

[dependencies]
hyper = "0.11.7"
futures = "0.1.17"
cranelift-codegen = { version = "0.36.0", features = ["enable-serde"] }
cranelift-native = "0.36.0"
wasmtime-wasi = { git = "https://github.com/CraneStation/wasmtime", package = "wasmtime-wasi", rev = "b7d86af0ec6dc6c3d228728f1ce47d0a0033c05f" }
wasmtime-jit = { git = "https://github.com/CraneStation/wasmtime", package = "wasmtime-jit", rev = "b7d86af0ec6dc6c3d228728f1ce47d0a0033c05f" }
url = "2.1.1"
