[package]
name = "faas-wasm-runtime"
version = "0.1.0"
authors = ["Daniel Bevenius <daniel.bevenius@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Function as a service runtime image for WASI modules"
readme = "README.md"
keywords = ["webassembly", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm_executor"
path = "src/lib.rs"

[dependencies]
wasmtime = "0.11.0"
hyper = "0.14.10"
futures = "0.1.17"
url = "2.1.1"
cloudevents = "0.1.1"
http = "0.1.19"
